@@ -2,6 +2,7 @@ v7.0
 -----
 + Added highlighting and tags back to the Friend Activity page
 + Added a button to easily decline trade offers (even invalid ones)
++ Added UI elements to continuous scrolling feature and the ability to retry when it fails
 + Enhanced Steam will now show bundle savings calculations on bundles with no savings
 : Updated wishlist code to work with the new page layout and design
 : Updated Early Access banners to work with more store sections
